Bug 131282 - FILEOPEN: DOCX: Table next to a fly frame is shifted down
Summary: FILEOPEN: DOCX: Table next to a fly frame is shifted down
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.0.0
Keywords: bibisected, bisected, filter:docx, regression
Depends on:
Blocks:
 
Reported: 2020-03-11 12:16 UTC by Xisco Faulí
Modified: 2020-03-30 13:48 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (60.75 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-03-11 12:16 UTC, Xisco Faulí
Details
Comparison MSO 2010 and LibreOffice 7.0 master (441.60 KB, image/png)
2020-03-11 12:16 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2020-03-11 12:16:17 UTC
Created attachment 158603 [details]
sample file

Steps to reproduce:
1. Open attached document

-> Table after "Pie Charts" is no longer next to the chart object. See comparison image

Reproduced in

Version: 7.0.0.0.alpha0+
Build ID: dde0cf9eafed91c88d9999a294ea32fe0e8aa4bc
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2020-03-11 12:16:37 UTC
Created attachment 158604 [details]
Comparison MSO 2010 and LibreOffice 7.0 master
Comment 2 Xisco Faulí 2020-03-11 12:17:50 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=fd7749fddc5a767461dfced55369af48e5a6d561

author	Miklos Vajna <vmiklos@collabora.com>	2020-02-14 16:29:44 +0100
committer	Miklos Vajna <vmiklos@collabora.com>	2020-02-14 18:37:34 +0100
commit fd7749fddc5a767461dfced55369af48e5a6d561 (patch)
tree 0a89f95af653d467958c008102a3126242a8d6b0
parent 10e08b1d398e6aa91aa4ced0ca6c966349be8b5d (diff)
sw: fix handling of table vs fly overlaps in the AddVerticalFlyOffsets case

Bisected with: bibisect-linux64-6.5

Adding Cc: to Miklos Vajna
Comment 3 Commit Notification 2020-03-24 08:08:24 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e68d961a361a784df1000a978bd02eca57e30565

tdf#131282 sw layout: fix shifted down table next to a fly frame

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2020-03-30 13:48:18 UTC
Verified in

Version: 7.0.0.0.alpha0+
Build ID: 11e6582b23b983fde4b04ece5b37c546bcd98a43
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

@Miklos, thanks for fixing this issue!