tdf#131282 sw layout: fix shifted down table next to a fly frame

Regression from commit fd7749fddc5a767461dfced55369af48e5a6d561 (sw: fix
handling of table vs fly overlaps in the AddVerticalFlyOffsets case,
2020-02-14), the problem was that the rectangle of the fly frame
included spacing when overlapping was checked.

Given that this code was explicitly added for Word compat purposes,
change it to ignore spacing. You can see that Word doesn't care about
spacing: increase the left margin of e.g. the pie chart in the bugdoc to
some large value and the table is still not shifted down.

Writer shifted the table down as the small spacing was already enough to
detect an overlap:

debug:21457:21457: SwTabFrame::CalcFlyOffsets: aTabRange is 896 -> 3698
debug:21457:21457: SwTabFrame::CalcFlyOffsets: aFlyRange is 3650 -> 6290

If we don't include that ~3 px spacing, then we don't overlap, similar
to Word.

Change-Id: I154c211bb0700d132fd168f49c1bbfb29e8caeb7